--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "date-fns": "^3.3.1",
     "react": "^18.2.0",
+    "react-date-range": "^2.0.0-alpha.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0"
   },
